2010-08-26  Zhenyao Mo  <zmo@google.com>

Reviewed by Kenneth Russell.

        Passing premultiplyAlpha=false to tex{Sub}Image2D loses information (skia)
        https://bugs.webkit.org/show_bug.cgi?id=38282

        * platform/graphics/skia/GraphicsContext3DSkia.cpp: Dealing with the case of texImage2D with HTMLCanvasElement input.
        (WebCore::GraphicsContext3D::getImageData):
2010-08-26  Zhenyao Mo  <zmo@google.com>

        Reviewed by Kenneth Russell.

        Passing premultiplyAlpha=false to tex{Sub}Image2D loses information (skia)
        https://bugs.webkit.org/show_bug.cgi?id=38282

        * fast/canvas/webgl/gl-teximage-expected.txt: Adding back the tests using canvas as texImage2D input.
        * fast/canvas/webgl/gl-teximage.html: Ditto.


Canonical link: https://commits.webkit.org/57055@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66288 268f45cc-cd09-0410-ab3c-d52691b4dbfc